Better ensure JDK 8 compatibility for future development
* Use multiple executions of the maven-compile-plugin with
  different --release settings.
* Rework integration tests.
* Use toolchain for Java 8 integration test.
* Update Github workflow to support toolchains
* Merged from stronger-compatibility branch at
  18a662cfdf04a1820c61309f551b56d1c4bd1e65